--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,13 @@
-header {
-    width: 100%;
-    height: 20%
+nav {
+	text-align: center;
+}
+nav>ul {
+	display: inline-block;
+	list-style-type: none;
+}
+nav>ul li {
+	display: inline-block;
+	padding: 10px;
+	margin-right: 100px;
+	border: 1px solid black;
 }
