--- a/style/style.css
+++ b/style/style.css
@@ -4,74 +4,31 @@ body {
 nav {
 	text-align: center;
 }
-ul {
-    background: #AAA;
-    border-radius: 10px;
-    text-align: left;
-    display: inline;
-    margin: 0;
-    padding: 15px 4px 17px 0;
-    list-style: none;
-    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+.nav {
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
 }
-ul li {
-    border-radius: 5px;
-    font: bold 12px/18px sans-serif;
-    display: inline-block;
-    margin-right: -4px;
-    position: relative;
-    padding: 15px 20px;
-    background: #AAA;
-    cursor: pointer;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
-    -ms-transition: all 0.2s;
-    -o-transition: all 0.2s;
-    transition: all 0.2s;
 
+.nav li {
+	float: left;
+	width: 160px;
+	position: relative;
 }
-ul li:hover {
-    background: #555;
-    color: #fff;
+
+.nav li a {
+	background: #333;
+	color: #fff;
+	display: block;
+	padding: 15px 8px;
+	text-decoration: none;
+	border-top: 1px solid #069;
+    border-radius: 10px;
 }
-ul li ul {
-    padding: 0;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 150px;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    display: none;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transiton: opacity 0.2s;
-    -moz-transition: opacity 0.2s;
-    -ms-transition: opacity 0.2s;
-    -o-transition: opacity 0.2s;
-    -transition: opacity 0.2s;
+
+.nav li a:hover {
+	color: #069;
 }
-ul li ul li { 
-    background: #555;
-    list-style-type: none;
-    display: block; 
-    color: #AAA;
-    text-shadow: 0 -1px 0 #000;
-}
-ul li ul li:hover { 
-    background: #666; 
-}
-ul li:hover ul {
-    display: block;
-    opacity: 1;
-    visibility: visible;
-}
-a:link {
-    text-decoration: none;
-}
-a:hover {
-    color: #FF00FF;
+a {
+    font-weight: bold;
 }
