--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,7 @@
-html {
-    width: 100%;
-    height: 100%;
+body {
+    background: #E0E0FF;
     margin: 0;
     padding: 0;
-}
-body {
-    width: 100%;
-    height: 100%;
-    background: #E0E0FF;
 }
 nav {
 	margin-top: 5px;
@@ -39,9 +33,8 @@ nav {
 #navigation li a:hover {
 	color: #079;
 }
-#foooter {
+#footer {
     width: 100%;
-    height: 15%;
     background: #1426cc;
     background: -moz-linear-gradient(-45deg, #1426cc 0%, #1caecc 15%, #1459d1 33%, #1459d1 33%, #1121af 50%, #0a6bb5 76%, #2f9ce0 88%, #0a0db2 100%);
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1426cc), color-stop(15%,#1caecc), color-stop(33%,#1459d1), color-stop(33%,#1459d1), color-stop(50%,#1121af), color-stop(76%,#0a6bb5), color-stop(88%,#2f9ce0), color-stop(100%,#0a0db2));
@@ -51,20 +44,14 @@ nav {
     background: linear-gradient(135deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1426cc', endColorstr='#0a0db2',GradientType=1 );
     color: black;
-    position: absolute;
+    position: relative;
     bottom: 0;
     text-align: center;
 }
-p {
-    display: inline;
-}
-.team {
-    font-weight: bold;
-    margin: 10px;
-}
-.contact {
+.team, .contact {
     font-weight: bold;
     color: black;
+    margin: 10px;
 }
 .contact a {
     color: white;
