--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
 }
+header>img {
+    width: 100%;
+    height: 100px;
+}
 nav {
 	margin-top: 5px;
 	text-align: center;
