--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
     height: 100%;
     background: #E0E0FF;
 }
+#header img {
+    height: 100px;
+    width: 100%;
+}
 nav {
 	margin-top: 5px;
 	text-align: center;
@@ -68,4 +72,18 @@ p {
 }
 .contact a {
     color: white;
+}
+h1 {
+    text-align: center;
+    color: #31312E;
+    font-weight: bold;
+}
+section {
+    width: 80%;
+    border: 1px solid black;
+}
+aside {
+    position: absolute;
+    border: 1px solid black;
+    height: 40%;
 }
