--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ nav {
 	border-top: 1px solid #069;
     border-radius: 10px;
     font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .navitem>a:hover {
