--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ nav {
     background: -ms-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
     background: linear-gradient(135deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
     color: black;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align: center;
 }
@@ -75,7 +75,7 @@ section {
     border: 1px solid black;
 }
 aside {
-    position: absolute;
+    position: fixed;
     border: 1px solid black;
     height: 40%;
 }
