--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     background: #E0E0FF;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 header>img {
     width: 100%;
@@ -44,7 +50,7 @@ nav {
 }
 #footer {
     width: 100%;
-    height: 15%;
+    height: 100px;;
     background: #1426cc;
     background: -moz-linear-gradient(-45deg, #1426cc 0%, #1caecc 15%, #1459d1 33%, #1459d1 33%, #1121af 50%, #0a6bb5 76%, #2f9ce0 88%, #0a0db2 100%);
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1426cc), color-stop(15%,#1caecc), color-stop(33%,#1459d1), color-stop(33%,#1459d1), color-stop(50%,#1121af), color-stop(76%,#0a6bb5), color-stop(88%,#2f9ce0), color-stop(100%,#0a0db2));
@@ -71,11 +77,8 @@ h1 {
     font-weight: bold;
 }
 section {
-    width: 80%;
     border: 1px solid black;
 }
 aside {
-    position: fixed;
     border: 1px solid black;
-    height: 40%;
 }
