--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     width: 100%;
     height: 100%;
 }
+
 header>img {
     width: 100%;
     height: 100px;
@@ -48,9 +49,11 @@ nav {
 .navitem>a:hover {
 	color: #079;
 }
-#footer {
+footer {
     width: 100%;
-    height: 15%;;
+    height: 60px;
+    position: fixed;
+    bottom: 0;
     background: #1426cc;
     background: -moz-linear-gradient(-45deg, #1426cc 0%, #1caecc 15%, #1459d1 33%, #1459d1 33%, #1121af 50%, #0a6bb5 76%, #2f9ce0 88%, #0a0db2 100%);
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1426cc), color-stop(15%,#1caecc), color-stop(33%,#1459d1), color-stop(33%,#1459d1), color-stop(50%,#1121af), color-stop(76%,#0a6bb5), color-stop(88%,#2f9ce0), color-stop(100%,#0a0db2));
@@ -59,8 +62,6 @@ nav {
     background: -ms-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
     background: linear-gradient(135deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
     color: black;
-    position: fixed;
-    bottom: 0;
     text-align: center;
 }
 .team, .contact {
@@ -76,15 +77,13 @@ h1 {
     color: #31312E;
     font-weight: bold;
 }
-section {
-    border: 1px solid black;
-}
 aside {
-    border: 1px solid black;
+
 }
-.sentances {
+.sentences {
     margin-left: 20px;
     font-style: italic;
+    text-align: center;
 }
 hr {
     width: 95%;
