--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
     height: 100%;
 }
 body {
-    background: #E0E0FF;
+    background: #B2D1FF;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -12,7 +12,7 @@ body {
 
 header>img {
     width: 100%;
-    height: 100px;
+    height: 80px;
 }
 #header img {
     height: 100px;
