--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h1 {
     font-weight: bold;
 }
 aside {
-
+    text-align: center;
 }
 .sentences {
     margin-left: 20px;
@@ -95,25 +95,29 @@ hr {
     padding: 7px;
     min-width: 120px;
 }
-.jokes-row {
-    width: 100%;
-    border: 1px solid grey;
-    background-color: #0052CC;
-    opacity: 0.4;
-    color: white;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 7px;
-    min-width: 120px;
-}
 .youtube-video {
     text-align: center;
 }
-iframe {
-    margin-left: 20px;
-    text-align: center;
+.social-icons {
+    display: inline-block;
+    margin-top: 10px;
+    position: relative;
+    left: 50px;
+    list-style-type: none;
 }
-.text {
-    float: left;
+.social-icons li {
+    display: inline-block;
+    border: 1px solid black;
+    background-color: rgb(9,166,218);
+}
+.social-icons li:hover {
+    border: 1px solid tomato;
+}
+#users dt {
+    font-size: 25px;
+}
+#users dd {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 15px;
 }
