--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,10 @@ hr {
 .social-icons li {
     display: inline-block;
     border: 1px solid black;
-    background-color: rgb(9,166,218);
+
 }
 .social-icons li:hover {
-    border: 1px solid tomato;
+    border: 1px solid orange;
 }
 #users dt {
     font-size: 25px;
@@ -120,4 +120,13 @@ hr {
     text-align: center;
     font-size: 20px;
     margin-bottom: 15px;
+}
+.fb {
+    background-color: #5079d3;
+}
+.twitter {
+    background-color: #4b99d3;
+}
+.googleplus {
+    background-color: #d44032;
 }
