--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,14 @@ html {
     height: 100%;
 }
 body {
-    background: #B2D1FF;
+    background: #2581dd;
+background: -moz-linear-gradient(45deg, #2581dd 27%, #2950f5 47%, #29b2f2 72%, #2950f5 95%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(27%,#2581dd), color-stop(47%,#2950f5), color-stop(72%,#29b2f2), color-stop(95%,#2950f5));
+background: -webkit-linear-gradient(45deg, #2581dd 27%,#2950f5 47%,#29b2f2 72%,#2950f5 95%);
+background: -o-linear-gradient(45deg, #2581dd 27%,#2950f5 47%,#29b2f2 72%,#2950f5 95%);
+background: -ms-linear-gradient(45deg, #2581dd 27%,#2950f5 47%,#29b2f2 72%,#2950f5 95%);
+background: linear-gradient(45deg, #2581dd 27%,#2950f5 47%,#29b2f2 72%,#2950f5 95%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2581dd', endColorstr='#2950f5',GradientType=1 );
     margin: 0;
     padding: 0;
     width: 100%;
@@ -12,7 +19,7 @@ body {
 
 header>img {
     width: 100%;
-    height: 80px;
+    height: 90px;
 }
 #header img {
     height: 100px;
@@ -41,13 +48,14 @@ nav .active {
 }
 footer {
     width: 100%;
-    background: #1426cc;
-    background: -moz-linear-gradient(-45deg, #1426cc 0%, #1caecc 15%, #1459d1 33%, #1459d1 33%, #1121af 50%, #0a6bb5 76%, #2f9ce0 88%, #0a0db2 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1426cc), color-stop(15%,#1caecc), color-stop(33%,#1459d1), color-stop(33%,#1459d1), color-stop(50%,#1121af), color-stop(76%,#0a6bb5), color-stop(88%,#2f9ce0), color-stop(100%,#0a0db2));
-    background: -webkit-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: -o-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: -ms-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: linear-gradient(135deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
+   background: #000333;
+background: -moz-linear-gradient(45deg, #000333 4%, #2950f5 12%, #29b2f2 46%, #2789ea 82%, #000333 95%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(4%,#000333), color-stop(12%,#2950f5), color-stop(46%,#29b2f2), color-stop(82%,#2789ea), color-stop(95%,#000333));
+background: -webkit-linear-gradient(45deg, #000333 4%,#2950f5 12%,#29b2f2 46%,#2789ea 82%,#000333 95%);
+background: -o-linear-gradient(45deg, #000333 4%,#2950f5 12%,#29b2f2 46%,#2789ea 82%,#000333 95%);
+background: -ms-linear-gradient(45deg, #000333 4%,#2950f5 12%,#29b2f2 46%,#2789ea 82%,#000333 95%);
+background: linear-gradient(45deg, #000333 4%,#2950f5 12%,#29b2f2 46%,#2789ea 82%,#000333 95%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000333', endColorstr='#000333',GradientType=1 );
     color: black;
     text-align: center;
 }
