--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 html {
-    width: 100%;
-    height: 100%;
+
 }
 body {
     background: #2581dd;
+    background-repeat: no-repeat;
 background: -moz-linear-gradient(45deg, #2581dd 27%, #2950f5 47%, #29b2f2 72%, #2950f5 95%);
 background: -webkit-gradient(linear, left bottom, right top, color-stop(27%,#2581dd), color-stop(47%,#2950f5), color-stop(72%,#29b2f2), color-stop(95%,#2950f5));
 background: -webkit-linear-gradient(45deg, #2581dd 27%,#2950f5 47%,#29b2f2 72%,#2950f5 95%);
