--- a/FootbalUni/css/style.css
+++ b/FootbalUni/css/style.css
@@ -1,13 +1,153 @@
-.navitem:before {
-	content:url('../footballball.png');
-	position: relative;
-	top: 10px;
+body {
+    background-image:url(../images/header.jpg);
+}
+header {
+    width: 90%;
+    height: 70px;
+    margin-left: 5%;
+    background: #96bcce;
+    background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
+    background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    opacity: 0.8;
+}
+header img {
+    margin-left: 3%;
 }
 .navitem {
-	display: inline-block;
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    margin-top: 10px;
+    padding-bottom: 15px;
+    border: 1px solid orange;
+    border-radius: 5px;
+    background-color: orange;
+}
+.navitem:hover {
+    background-color: darkorange;
+    text-decoration: underline;
+}
+.navitem:before {
+    content:url('../images/footballball.png');
+    position: relative;
+    top: 10px;
 }
 .navitem a {
-	text-decoration: none;
-	color: orange;
-	font-weight: bold;
+    text-decoration: none;
+    color: green;
+    font-weight: bold;
+}
+hr {
+    width: 90%;
+    height: 1.5px;
+    background-color: #333;
+    border-radius: 5px;
+}
+.team {
+    font-weight: bold;
+    color: black;
+    margin: 10px;
+}
+.team a {
+    color: black;
+    font-weight: bold;
+}
+h1 {
+    color: #31312E;
+    font-weight: bold;
+}
+aside {
+    text-align: center;
+}
+.sentences {
+    margin-left: 20px;
+    font-style: italic;
+    font-size: 1.6em;
+}
+.galleria {
+     width: 100%;
+     height: 400px;
+     background: #000; 
+}
+.jokes {
+    width: 100%;
+    border: 1px solid grey;
+    background-color: #0052CC;
+    opacity: 0.4;
+    color: white;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-top: 5px;
+    padding: 7px;
+    min-width: 120px;
+}
+.youtube-video {
+    text-align: center;
+}
+.social-icons {
+    display: inline-block;
+    margin-top: 10px;
+    position: relative;
+    left: 50px;
+    list-style-type: none;
+}
+.social-icons li {
+    display: inline-block;
+    border: 1px solid black;
+
+}
+.social-icons li:hover {
+    border: 1px solid orange;
+}
+#users dt {
+    font-size: 25px;
+}
+#users dd {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+.fb {
+    background-color: #5079d3;
+}
+.twitter {
+    background-color: #4b99d3;
+}
+.googleplus {
+    background-color: #d44032;
+}
+dt {
+    padding-left: 5px;
+}
+dt img {
+    border: 2px solid #455;
+    border-radius: 5px; 
+}
+h2 {
+    color: #333;
+}
+.content {
+    margin-left: 10%;
+}
+footer {
+    text-align: center;
+    width: 90%;
+    height: 10%;
+    margin-left: 5%;
+    position: fixed;
+    bottom:0;
+    left:0;
+    background: #718e9b;
+    background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
+    background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    opacity: 0.8;
 }
