--- a/FootbalUni/css/style.css
+++ b/FootbalUni/css/style.css
@@ -1,22 +1,4 @@
-body {
-    background-image:url(../images/header.jpg);
-}
-header {
-    width: 90%;
-    height: 70px;
-    margin-left: 5%;
-    background: #96bcce;
-    background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
-    background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-    background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-    background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-    background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-    opacity: 0.8;
-}
-header img {
-    margin-left: 3%;
-}
+
 .navitem {
     display: inline-block;
     width: 100%;
@@ -42,11 +24,45 @@ header img {
     color: green;
     font-weight: bold;
 }
-hr {
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-image:url(../images/header.jpg);
+    background-repeat: no-repeat;
+}
+.color-header {
     width: 90%;
-    height: 1.5px;
-    background-color: #333;
-    border-radius: 5px;
+    height: 70px;
+    margin-left: 5%;
+    background: #96bcce;
+background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
+background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96bcce', endColorstr='#96bcce',GradientType=1 );
+    opacity: 0.8;
+}
+.color-footer {
+    text-align: center;
+	width: 90%;
+	height: 10%;
+    margin-left: 5%;
+	position: fixed;
+	bottom:0;
+	left:0;
+	background: #718e9b;
+background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
+background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#718e9b', endColorstr='#718e9b',GradientType=1 );
+    opacity: 0.8;
 }
 .team {
     font-weight: bold;
@@ -68,6 +84,12 @@ aside {
     margin-left: 20px;
     font-style: italic;
     font-size: 1.6em;
+}
+hr {
+    width: 90%;
+    height: 1.5px;
+    background-color: #333;
+    border-radius: 5px;
 }
 .galleria {
      width: 100%;
@@ -133,21 +155,38 @@ h2 {
 }
 .content {
     margin-left: 10%;
+    background: white;
+    opacity: 0.7;
+    border-radius: 10px;
 }
-footer {
+#national {
+    width: 100%;
+    background: #5cc0e8;
     text-align: center;
-    width: 90%;
-    height: 10%;
-    margin-left: 5%;
-    position: fixed;
-    bottom:0;
-    left:0;
-    background: #718e9b;
-    background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
-    background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-    background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-    background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-    background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-    opacity: 0.8;
+    border-radius: 10px;
+    color: black;
+    font-size: 1.4em;
+    padding-top: 10px;
+    padding-left: 10px;
+    opacity: 0.6;
+}
+section article {
+	padding: 10px;
+	margin-left: 10%;
+	padding-left: 10px;
+	text-align: left;
+	width: 60%;
+	border-radius: 10px;
+	background: rgba(255, 255, 255, 0.9);
+	margin-bottom: 20px;
+}
+#otbor {
+    width: 100%;
+    background: #5cc0e8;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1em;
+    padding-top: 10px;
+    padding-left: 10px;
+    opacity: 0.8; 
 }
