--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,4 @@
-html {
-    width: 100%;
-    height: 100%;
-}
-body {
-    background: #B2D1FF;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
 
-header>img {
-    width: 100%;
-    height: 80px;
-}
-#header img {
-    height: 100px;
-    width: 100%;
-}
 nav {
 	margin-top: 5px;
 	text-align: center;
@@ -39,17 +20,49 @@ nav .active {
 .navitem>a:hover{
 	color: #079;
 }
-footer {
+
+body {
     width: 100%;
-    background: #1426cc;
-    background: -moz-linear-gradient(-45deg, #1426cc 0%, #1caecc 15%, #1459d1 33%, #1459d1 33%, #1121af 50%, #0a6bb5 76%, #2f9ce0 88%, #0a0db2 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1426cc), color-stop(15%,#1caecc), color-stop(33%,#1459d1), color-stop(33%,#1459d1), color-stop(50%,#1121af), color-stop(76%,#0a6bb5), color-stop(88%,#2f9ce0), color-stop(100%,#0a0db2));
-    background: -webkit-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: -o-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: -ms-linear-gradient(-45deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    background: linear-gradient(135deg, #1426cc 0%,#1caecc 15%,#1459d1 33%,#1459d1 33%,#1121af 50%,#0a6bb5 76%,#2f9ce0 88%,#0a0db2 100%);
-    color: black;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-image:url(../images/header.jpg);
+    background-repeat: no-repeat;
+}
+#header {
+    width: 90%;
+    height: 70px;
+    margin-left: 5%;
+    background: #96bcce;
+background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
+background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96bcce', endColorstr='#96bcce',GradientType=1 );
+    opacity: 0.8;
+}
+#header img {
+    margin-left: 3%;
+}
+#footer {
     text-align: center;
+	width: 90%;
+	height: 10%;
+    margin-left: 5%;
+	position: fixed;
+	bottom:0;
+	left:0;
+	background: #718e9b;
+background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
+background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#718e9b', endColorstr='#718e9b',GradientType=1 );
+    opacity: 0.8;
 }
 .team {
     font-weight: bold;
@@ -57,10 +70,10 @@ footer {
     margin: 10px;
 }
 .team a {
-    color: white;
+    color: black;
+    font-weight: bold;
 }
 h1 {
-    text-align: center;
     color: #31312E;
     font-weight: bold;
 }
@@ -70,19 +83,18 @@ aside {
 .sentences {
     margin-left: 20px;
     font-style: italic;
-    text-align: center;
     font-size: 1.6em;
 }
 hr {
-    width: 95%;
-    color: #00008E;
+    width: 90%;
     height: 1.5px;
-    background-color: #6697E0;
+    background-color: #333;
+    border-radius: 5px;
 }
 .galleria {
      width: 100%;
      height: 400px;
-     background: #000 
+     background: #000; 
 }
 .jokes {
     width: 100%;
@@ -140,5 +152,38 @@ dt img {
 }
 h2 {
     color: #333;
+}
+.content {
+    margin-left: 10%;
+}
+#national {
+    width: 100%;
+    background: #5cc0e8;
     text-align: center;
+    border-radius: 10px;
+    color: black;
+    font-size: 1.4em;
+    padding-top: 10px;
+    padding-left: 10px;
+    opacity: 0.6;
+}
+section article {
+	padding: 10px;
+	margin-left: 10%;
+	padding-left: 10px;
+	text-align: left;
+	width: 60%;
+	border-radius: 10px;
+	background: rgba(255, 255, 255, 0.9);
+	margin-bottom: 20px;
+}
+#otbor {
+    width: 100%;
+    background: #5cc0e8;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1em;
+    padding-top: 10px;
+    padding-left: 10px;
+    opacity: 0.8; 
 }
