--- a/FootbalUni/css/style.css
+++ b/FootbalUni/css/style.css
@@ -1,3 +1,23 @@
+body {
+    background-image:url(../images/header.jpg);
+    background-repeat: no-repeat;
+}
+.color-header {
+    width: 90%;
+    height: 70px;
+    margin-left: 5%;
+    background: #96bcce;
+background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
+background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96bcce', endColorstr='#96bcce',GradientType=1 );
+    opacity: 0.8;
+}
+
+/* Menu Bar */
 
 .navitem {
     display: inline-block;
@@ -24,46 +44,28 @@
     color: green;
     font-weight: bold;
 }
-body {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    background-image:url(../images/header.jpg);
-    background-repeat: no-repeat;
-}
-.color-header {
-    width: 90%;
-    height: 70px;
-    margin-left: 5%;
-    background: #96bcce;
-background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
-background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
-background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96bcce', endColorstr='#96bcce',GradientType=1 );
-    opacity: 0.8;
-}
-.color-footer {
+
+/* Footer */
+
+footer {
     text-align: center;
-	width: 90%;
-	height: 10%;
+    width: 90%;
+    height: 50px ;
     margin-left: 5%;
-	position: fixed;
-	bottom:0;
-	left:0;
-	background: #718e9b;
-background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
-background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
-background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#718e9b', endColorstr='#718e9b',GradientType=1 );
+    position: fixed;
+    bottom:0;
+    left:0;
+    background: #718e9b;
+    background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
+    background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
     opacity: 0.8;
 }
+
+
 .team {
     font-weight: bold;
     color: black;
@@ -91,26 +93,27 @@ hr {
     background-color: #333;
     border-radius: 5px;
 }
+
+/* Gallery */
+
 .galleria {
      width: 100%;
      height: 400px;
-     background: #000; 
+     opacity: 0.9;
+     margin-bottom: 5px;
 }
-.jokes {
-    width: 100%;
-    border: 1px solid grey;
-    background-color: #0052CC;
-    opacity: 0.4;
-    color: white;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 7px;
-    min-width: 120px;
-}
+
+/* Videos */
+
 .youtube-video {
     text-align: center;
 }
+.youtube-player {
+
+}
+
+/* Social buttons */
+
 .social-icons {
     display: inline-block;
     margin-top: 10px;
@@ -126,14 +129,6 @@ hr {
 .social-icons li:hover {
     border: 1px solid orange;
 }
-#users dt {
-    font-size: 25px;
-}
-#users dd {
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 15px;
-}
 .fb {
     background-color: #5079d3;
 }
@@ -143,12 +138,27 @@ hr {
 .googleplus {
     background-color: #d44032;
 }
+
+#users dt {
+    font-size: 25px;
+}
+#users dd {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+/* About */
 dt {
     padding-left: 5px;
 }
 dt img {
+ 
+}
+dd img {
     border: 2px solid #455;
     border-radius: 5px; 
+    width: 100px;
 }
 h2 {
     color: #333;
@@ -159,7 +169,7 @@ h2 {
     opacity: 0.7;
     border-radius: 10px;
 }
-#national {
+dt {
     width: 100%;
     background: #5cc0e8;
     text-align: center;
@@ -170,15 +180,12 @@ h2 {
     padding-left: 10px;
     opacity: 0.6;
 }
-section article {
-	padding: 10px;
-	margin-left: 10%;
-	padding-left: 10px;
-	text-align: left;
-	width: 60%;
-	border-radius: 10px;
-	background: rgba(255, 255, 255, 0.9);
-	margin-bottom: 20px;
+ article {
+    text-align: left;
+    width: 100%;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.9);
+    margin-bottom: 20px;
 }
 #otbor {
     width: 100%;
@@ -189,4 +196,11 @@ section article {
     padding-top: 10px;
     padding-left: 10px;
     opacity: 0.8; 
+}
+.container-fluid {
+    padding: 0 15px;
+}
+.row {
+    margin-left: 0;
+    margin-right: 0;
 }
