--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,72 @@
-
-nav {
-	margin-top: 5px;
-	text-align: center;
-}
-.navitem>a {
-	background: #333;
-	color: #fff;
-	display: block;
-	padding: 15px 8px;
-	text-decoration: none;
-	border-top: 1px solid #069;
-    border-radius: 10px;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-nav .active {
-    color: #079;
-}
-.navitem>a:hover{
-	color: #079;
-}
-
 body {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
     background-image:url(../images/header.jpg);
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-#header {
+.color-header {
     width: 90%;
     height: 70px;
     margin-left: 5%;
     background: #96bcce;
-background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
-background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
-background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96bcce', endColorstr='#96bcce',GradientType=1 );
+    background: -moz-linear-gradient(45deg, #96bcce 0%, #cfebf9 50%, #96bcce 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#96bcce), color-stop(50%,#cfebf9), color-stop(100%,#96bcce));
+    background: -webkit-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: -o-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: -ms-linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
+    background: linear-gradient(45deg, #96bcce 0%,#cfebf9 50%,#96bcce 100%);
     opacity: 0.8;
 }
-#header img {
-    margin-left: 3%;
-}
-#footer {
+
+/* Menu Bar */
+
+.navitem {
+    display: inline-block;
+    width: 100%;
+    height: 50px;
     text-align: center;
-	width: 90%;
-	height: 10%;
+    margin-top: 10px;
+    padding-bottom: 15px;
+    border: 1px solid orange;
+    border-radius: 5px;
+    background-color: orange;
+}
+.navitem:hover {
+    background-color: darkorange;
+    text-decoration: underline;
+}
+.navitem:before {
+    content:url('../images/footballball.png');
+    position: relative;
+    top: 10px;
+}
+.navitem a {
+    text-decoration: none;
+    color: green;
+    font-weight: bold;
+}
+
+/* Footer */
+
+footer {
+    text-align: center;
+    width: 90%;
+    height: 50px;
     margin-left: 5%;
-	position: fixed;
-	bottom:0;
-	left:0;
-	background: #718e9b;
-background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
-background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
-background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#718e9b', endColorstr='#718e9b',GradientType=1 );
+    position: fixed;
+    bottom:0;
+    left:0;
+    background: #718e9b;
+    background: -moz-linear-gradient(45deg, #718e9b 0%, #96bcce 50%, #718e9b 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#718e9b), color-stop(50%,#96bcce), color-stop(100%,#718e9b));
+    background: -webkit-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -o-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: -ms-linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
+    background: linear-gradient(45deg, #718e9b 0%,#96bcce 50%,#718e9b 100%);
     opacity: 0.8;
 }
+
+/* Team */
+
 .team {
     font-weight: bold;
     color: black;
@@ -73,9 +76,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#718e9b', end
     color: black;
     font-weight: bold;
 }
-h1 {
+h1, h2 {
     color: #31312E;
     font-weight: bold;
+    text-align: center;
 }
 aside {
     text-align: center;
@@ -85,37 +89,42 @@ aside {
     font-style: italic;
     font-size: 1.6em;
 }
+.softuni {
+    margin-left: 20px;
+    font-weight: bold;
+    font-size: 1.6em;
+}
 hr {
     width: 90%;
     height: 1.5px;
     background-color: #333;
-    border-radius: 5px;
+
 }
+
+/* Gallery */
+
 .galleria {
      width: 100%;
      height: 400px;
-     background: #000; 
+     opacity: 0.9;
+     margin-bottom: 5px;
 }
-.jokes {
-    width: 100%;
-    border: 1px solid grey;
-    background-color: #0052CC;
-    opacity: 0.4;
-    color: white;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 7px;
-    min-width: 120px;
-}
+
+/* Videos */
+
 .youtube-video {
     text-align: center;
 }
+.youtube-player {
+
+}
+
+/* Social buttons */
+
 .social-icons {
     display: inline-block;
     margin-top: 10px;
     position: relative;
-    left: 50px;
     list-style-type: none;
 }
 .social-icons li {
@@ -126,14 +135,6 @@ hr {
 .social-icons li:hover {
     border: 1px solid orange;
 }
-#users dt {
-    font-size: 25px;
-}
-#users dd {
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 15px;
-}
 .fb {
     background-color: #5079d3;
 }
@@ -143,39 +144,52 @@ hr {
 .googleplus {
     background-color: #d44032;
 }
-dt {
-    padding-left: 5px;
+
+#users dt {
+    font-size: 25px;
 }
+#users dd {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+/* About */
 dt img {
     border: 2px solid #455;
     border-radius: 5px; 
+    width: 100px;
+    margin-right: 10px;
+}
+dd img {
+    border: 2px solid #455;
+    border-radius: 5px;
+    width: 100px;
 }
 h2 {
     color: #333;
 }
 .content {
     margin-left: 10%;
+    background: rgba(255,255,255,0.7);
+    border-radius: 10px;
 }
-#national {
+dt {
     width: 100%;
-    background: #5cc0e8;
+    background: rgba(92,192,232, 0.6);
     text-align: center;
     border-radius: 10px;
     color: black;
     font-size: 1.4em;
     padding-top: 10px;
-    padding-left: 10px;
-    opacity: 0.6;
+    padding-left: 15px;
 }
-section article {
-	padding: 10px;
-	margin-left: 10%;
-	padding-left: 10px;
-	text-align: left;
-	width: 60%;
-	border-radius: 10px;
-	background: rgba(255, 255, 255, 0.9);
-	margin-bottom: 20px;
+ article {
+    text-align: left;
+    width: 100%;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.9);
+    margin-bottom: 20px;
 }
 #otbor {
     width: 100%;
@@ -186,4 +200,12 @@ section article {
     padding-top: 10px;
     padding-left: 10px;
     opacity: 0.8; 
+}
+.container-fluid {
+    padding: 0 15px;
+}
+.row {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 50px;
 }
